k8s/server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ia-agent-test
  labels:
    app.kubernetes.io/name: ia-agent-test
